bug fix: title not align left

--- a/app/internal_packages/thread-search/styles/thread-search-bar.less
+++ b/app/internal_packages/thread-search/styles/thread-search-bar.less
@@ -14,7 +14,6 @@
   font-weight: 400;
   margin-left: 20px;
   width: 100%;
-  max-width: 1140px;
 }
 .thread-title {
   float:left;
